Corrected name of president

--- a/index.html
+++ b/index.html
@@ -344,9 +344,9 @@ if (window.scrollY > 10) {
     <div class="team">
       <div class="team-member">
         <div class="member-avatar">
-          <img src="./images/avatar.png" alt="Mazza Pierdonienico" loading="lazy" width="120" height="120">
+          <img src="./images/avatar.png" alt="Mazza Pierdomenico" loading="lazy" width="120" height="120">
         </div>
-        <h3>Mazza Pierdonienico</h3>
+        <h3>Mazza Pierdomenico</h3>
         <p class="lang" data-key="role_president">President</p>
       </div>
       
